<resources>
    <string name="app_name">9GDH</string>
    <string name="greeting">siema siema</string>
    <string name="default_button">Default Button</string>
    <string name="encryption_button">Szyfry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prawo_button">Prawo Harcerskie</string>
    <string name="krzyz1">
        - Ciężka droga oraz gotowość do walki i poświęcenia
    </string>
    <string name="krzyz2">
        - Znak skautowy
        \n- Wzorowana na igle magnetycznej busoli
        \n- Symbolizuje podążanie harcerzy przez życie zgodnie z ideałami Przyrzeczenia i Prawa Harcerskiego
    </string>
    <string name="krzyz3">
        -  Wywodzi się z czasów, gdy pozdrawiali sie tak rycerze w czasie nocnej służby
        \n- Przypomina o stałej gotowości do czynu, służby Ojczyźnie, pracy dla innych i nad sobą
    </string>
    <string name="krzyz4">
         - Symbolizuje zwycięstwo
        \n- Wywodzi się ze starożytności, gdy zwycięzców olimpiad dekorowano wieńcami laurowymi
    </string>
    <string name="krzyz5">
        - Symbolizuje dążenie do doskonałości
        \n- Symbolizuje również bratni krąg, który łączy wszystkich harcerzy
    </string>
    <string name="krzyz6">
        -Symbolizuje męstwo i siłę
    </string>
    <string name="krzyz7">
       - Oznaczają licznych członków ruchów skautowych na świecie
       \n- Symbolizują trudy i radości na ciężkiej drodze życia
    </string>
    <string name="krzyz8">
        - Oznaczają pozytywne oddziaływanie harcerzy na społeczeństwo
    </string>
    <string name="lilijka1">
        - \'O\' oznacza Ojczyznę
        \n- \'N\' oznacza Naukę
        \n- \'C\' oznacza Cnotę
    </string>
    <string name="lilijka2">
        - Symobolizują służbę Bogu, Ojczyźnie oraz bliźnim
    </string>
    <string name="lilijka3">
        - Symbolizuje podążanie w dobrym kierunku, czyli zgodnie z ideałami Prawa i Przyrzeczenia Harcerskiego
    </string>
    <string name="mundur1">
        - Oznacza stopień noszącej go osoby
    </string>
    <string name="mundur2">
        - Oznacza funkcje jaką pełni nosząca go osoba
    </string>
    <string name="mundur3">
        - Oznacza stopień instruktorski noszącej ją osoby
    </string>
    <string name="mundur4">
        - Symbolizują ciągłą gotowość harcerza do pracy
    </string>
    <string name="pagon_wedrowniczy1">
        Symbolizuję siłę ducha.
    </string>
    <string name="pagon_wedrowniczy2">
        Symbolizuję siłę rozumu.
    </string>
    <string name="pagon_wedrowniczy3">
        Symbolizuję siłę ciała.
    </string>
    <string name="pagon_wedrowniczy4">
        Symbolizuję:\n
            - Pracę nad sobą\n
            - Szukanie miejsca w społeczeństwie\n
            - Służbę.
    </string>
    <string name="struktura_opis">
        Struktura ZHR przedstawiona na tej stronie została znacząco uproszczona. Pominięto również Organizacje Harcerek.
    </string>
    <string name="struktura_hufiec">
        Hufcem kieruje Hufcowy, mianowony przez
        Naczelnika Harcerzy na wniosek zbiórki
        instruktorów hufca. Hufiec pomaga w pracy
        programowej drużyn i sprawuje nad nimi
        nadzór metodyczny.
    </string>
    <string name="struktura_rada_naczelna">
        22 członków wybranych przez Walny Zjazd,
        Przewodniczący ZHR, Naczelniczka Harcerek, Naczelnik Harcerzy
        oraz 12 Przewodniczących Zarządów Okręgów.
    </string>
    <string name="struktura_komisja_rewizyjna_zwiazku">
        7 członków wybranych przez Walny Zjazd. Czuwa nad zgodnością działania
        Władz Związku ze Statutem, regulaminami wewnętrznymi oraz przepisami prawa.
    </string>
    <string name="struktura_sad_harcerski">
        5 członków wybranych przez Walny Zjazd.
    </string>
    <string name="struktura_przewodniczacy">
        Kieruje pracą związku, jest Przewodniczącym Rady Naczelnej oraz przełożonym Naczelniczki
        Harcerek oraz Naczelnika Harcerzy.
    </string>
    <string name="struktura_naczelnictwo">
        Jest zarządem organizacji. Składa się z Przewodniczącego ZHR, Naczelniczki Harcerek i
        Naczelnika Harcerzy oraz 8 członków wybranych przez Radę Naczelną, w tym: 2 Wiceprzewodniczących
        Sekretarza Generalnego, Naczelnego Kapelana, Skarbnika, Komisarza Zagranicznego.
    </string>
    <string name="struktura_naczelnik_harcerzy">
        Kieruje Organizacją Harcerzy przy pomocy powołanej przez siebie Głównej Kwatery Harcerzy,
        w skład której wchodzą: Komisja Harcmistrzowska, Centralna Szkoła Instruktorska, wydziały
        metodyczne i inne jednostki metodyczne.
    </string>
    <string name="struktura_glowna_kwatera">
        Pomaga w prowadzeniu Organizacji Harcerzy Naczelnikowi Harcerzy. Składa się z: Komisja Harcmistrzowska, Centralna Szkoła Instruktorska, wydziały
        metodyczne i inne jednostki metodyczne.
    </string>
    <string name="struktura_komisje_rewizyjne_okregow">
        Składają się z 3 osób wybranych na zbiórce instruktorskiej Okręgu. Czuwają nad zgodnością
        działania jednostek organizacyjnych Okręgu ze statutem, regulaminami wewnętrznymi oraz
        przepisami prawa.
    </string>
    <string name="struktura_chorgwie">
        Chorągwią kieruje Komendant Chorągwi
        (mianowany przez Naczelnika Harcerzy
        na wniosek zbiórki instruktorów) przy pomocy
        powołanej przez siebie Komendy Chorągwi.
        W ramach Chorągwi działa Komisja Stopni
        Instruktorskich, Szkoła Instruktorska lub
        Wydział Kształcenia, wydziały metodyczne
        i inne jednostki programowo-metodyczne.

    </string>
    <string name="struktura_okregi">
        Kierowane przez 5-9-osobowy Zarząd wybierany przez zbiórkę instruktorską Okręgu. Przewodniczący Zarządu i Skarbnik są zatwierdzani przez Haczelnictwo ZHR. W skład
        Zarządu wchodzi Komendantka Chorągwi Harcerek i Komendant Chorągwi Harcerzy. Okręg prowadzi sprawy administracyjne oraz finansowo-gospodarcze wszystkich jednostek
        z terenu swojego działania oraz prezentuje ZHR wobec władz lokalnych. Koordynuje także działanie Kół Przyjaciół Harcerstwa.
    </string>
    <string name="struktura_obwody">
        Dla ułatwienia działania środowisk lokalnych
        (na poziomie hufca) w Okręgu mogą powstawać Obwody,
        realizujące części kompetencji Okręgu na obszarze
        swojego działania.
    </string>
    <string name="struktura_druzyny">
        Drużyna jest podstawową jednostką
        wychowawczą ZHR. Prowadzi ją drużynowy-wychowawca będący pełnoletnim instruktorem
        ZHR. Drużynowych mianuje hufcowy.
    </string>
    <string name="struktura_walny_zjazd">
        Najwyższa władza Związku. Zjazd odbywa się co 2 lata.
    </string>
    <string name="stopnie_idea_mlodzik">
        Wiem, co to znaczy być harcerzem. Znam Prawo Harcerskie. Jestem gotowy złożyć Przyrzeczenie
        Harcerskie. Jestem samodzielny i gotowy do służby. Pomagam innym. Odróżniam dobro i zło.
        Postępuję zgodnie z wskazaniami wiary chrześcijańskiej. Poprzez dobre uczynki staję się coraz lepszy.
        Jestem dobrym synem, kolegą i uczniem.
    </string>
    <string name="stopnie_oznaczenie_mlodzik">
        Stopień oznacza się krzyżem harcerskim umieszczonym nad lewą kieszenią, na mundurze.
    </string>
    <string name="stopnie_idea_wyw">
        Rozumiem Prawo Harcerskie i zgodnie z nim postępuję w życiu codziennym. Systematycznie
        uczestniczę w praktykach religijnych Kościoła. Staram się być dobrym harcerzem. Jestem samodzielny.
        Potrafię zadbać o siebie. Aktywie i odpowiedzialnie uczestniczę w życiu zastępu i drużyny. Można na
        mnie polegać w trudnych sytuacjach. Doskonalę się w technikach harcerskich. Jako syn, brat, wnuk
        jestem gotowy do poświęceń na rzecz rodziny. Pamiętam o swoich obowiązkach i właściwie je
        wypełniam. Staram się być przykładem dla swoich rówieśników. Harcerzem jestem nie tylko wtedy,
        kiedy mam na sobie mundur. Jestem gotów na każde wezwanie do służby.

    </string>
    <string name="stopnie_oznaczenie_wyw">
        Stopień oznacza się srebrną lilijką na krzyżu harcerskim.
    </string>
    <string name="biografie_button">Biografie</string>
    <string name="stopnie_button">Stopnie</string>
    <string name="struktura_button">Struktura i Funkcje</string>
    <string name="_9_harcerz_jest_oszcz_dny_i_ofiarny">9. Harcerz jest oszczędny i ofiarny</string>
    <string name="_8_harcerz_jest_zawsze_pogodny">8. Harcerz jest zawsze pogodny.</string>
    <string name="_10_harcerz_jest_czysty_w_my_li_mowie_i_uczynkach_nie_pali_tytoniu_i_nie_pije_napoj_w_alkoholowych">10. Harcerz jest czysty w myśli, mowie i uczynkach, nie pali tytoniu i nie pije napojów alkoholowych.</string>
    <string name="komentarz">Komentarz</string>
    <string name="_4_harcerz_w_ka_dym_widzi_bli_niego_a_za_brata_uwa_a_ka_dego_innego_harcerza">4. Harcerz w każdym widzi bliźniego, a za brata uważa każdego innego harcerza.</string>
    <string name="_5_harcerz_post_puje_po_rycersku">5. Harcerz postępuje po rycersku</string>
    <string name="_7_harcerz_jest_karny_i_pos_uszny_rodzicom_i_wszystkim_swoim_prze_o_onym">7. Harcerz jest karny i posłuszny rodzicom i wszystkim swoim przełożonym.</string>
    <string name="_6_harcerz_mi_uje_przyrod_i_stara_si_j_pozna">6. Harcerz miłuje przyrodę i stara się ją poznać</string>
    <string name="_3_harcerz_jest_po_yteczny_i_niesie_pomoc_bli_nim">3. Harcerz jest pożyteczny i niesie pomoc bliźnim.</string>
    <string name="_2_na_s_owie_harcerza_polegaj_jak_na_zawiszy">2. Na słowie harcerza polegaj jak na Zawiszy.</string>
    <string name="_1_harcerz_s_u_y_bogu_i_polsce_i_sumiennie_spe_nia_swoje_obowi_zki">1. Harcerz służy Bogu i Polsce i sumiennie spełnia swoje obowiązki.</string>
    <string name="mam_szczer_wol_ca_ym_yciem_pe_ni_s_u_b_bogu_i_polsce_nie_ch_tn_pomoc_bli_nim_i_by_pos_usznym_prawu_harcerskiemu">Mam szczerą wolę całym życiem pełnić służbę Bogu i Polsce, nieść chętną pomoc bliźnim i być posłusznym Prawu Harcerskiemu.</string>
    <string name="m_odzik">Młodzik</string>
    <string name="oznaczenie_stopnia">Oznaczenie stopnia</string>
    <string name="sylwetka_stopnia">Sylwetka stopnia</string>
    <string name="musztra">Musztra</string>
    <string name="statut_zhr">Statut ZHR</string>
    <string name="sprawno_ci">Sprawności</string>
    <string name="regulamin_umundurowania">Umundurowanie</string>
    <string name="symbolika">Symbolika</string>
    <string name="onc">ONC</string>
    <string name="ig_a_magnetyczna">Igła Magnetyczna</string>
    <string name="najwy_szy_p_omie">Najwyższy Płomień</string>
    <string name="redni_p_omie">Średni Płomień</string>
    <string name="drewno_pod_p_omieniem">Drewno pod płomieniem</string>
    <string name="zbroja">„Zbroja”</string>
    <string name="zbroja_text1">Dałeś mi Panie zbroję, dawny kuł płatnerz ją\n W wielu pogięta bojach, w wielu ochrzczona krwią\n W wykutej dla giganta potykam się co krok\n Bo jak sumienia szantaż uciska lewy bok</string>
    <string name="zbroja_text2">Lecz choć zaginął hełm i miecz\nDla ciała żadna w niej ostoja\nTo przecież w końcu ważna rzecz\nZbroja</string>
    <string name="zbroja_text3">Magicznych na niej rytów dziś nie odczyta nikt\nAle wykuta z mitów i wieczna jest jak mit\nDo ciała mi przywarła, nie daje żyć i spać\nA tłum się cieszy z karła, co chce giganta grać</string>
    <string name="zbroja_text4">Lecz choć zaginął hełm i miecz\nDla ciała żadna w niej ostoja\nBo przecież w końcu ważna rzecz\nZbroja</string>
    <string name="zbroja_text5">A taka w niej powaga dawno zaschniętej krwi\nŻe czuję jak wymaga i każe rosnąć mi\nByć może nadaremnie, lecz stanę w niej za stu\nZdejmij ją Panie ze mnie, jeśli umrę podczas snu</string>
    <string name="zbroja_text_6">Bo choć zaginął hełm i miecz\nDla ciała żadna w niej ostoja\nTo w końcu życia warta rzecz\nZbroja\nZbroja</string>
</resources>