<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/scrollViewStyle"
    tools:context=".ZbrojaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textViewBigStyle"
        android:text="@string/zbroja"
        android:textSize="@dimen/text_extra_large_size"
        android:layout_marginTop="@dimen/margin_border_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewRegularStyle"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/zbroja_text1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewRegularStyle"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/zbroja_text2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewRegularStyle"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/zbroja_text3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewRegularStyle"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/zbroja_text4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewRegularStyle"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/zbroja_text5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewRegularStyle"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_extended"
            android:text="@string/zbroja_text_6"/>
    </LinearLayout>
</ScrollView>