<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fragmentStyle"
    tools:context=".Symbolika_LilijkaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                style="@style/marginStyle"
                android:layout_marginTop="@dimen/margin_border_vertical"
                android:layout_gravity="center"
                android:src="@drawable/symbolika_lilijka"/>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewBigStyle"
                android:textAlignment="viewStart"
                android:text="@string/onc"/>

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewRegularStyle"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/margin_extended"
                android:text="@string/lilijka1" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewBigStyle"
                android:textAlignment="viewStart"
                android:text="Trzy ramiona"/>

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewRegularStyle"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/margin_extended"
                android:text="@string/lilijka2" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewBigStyle"
                android:textAlignment="viewStart"
                android:text="@string/ig_a_magnetyczna"/>

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewRegularStyle"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/margin_extended"
                android:text="@string/lilijka3" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>